tests/samples/negative/generics/duplicate_generic_params.ax
module duplicate_generic_params;

struct Pair<T, T> {
    value: T;
}

enum Choice<E, E>: u8 {
    one(E) = 1,
}

fn main() -> i32 {
    return 0;
}
